--- a/src/Frontend/src/styles/footer.css
+++ b/src/Frontend/src/styles/footer.css
@@ -26,5 +26,5 @@ footer {
 }
 
 .footer-content a:hover {
-    color: #3498db; /* Bleu clair au survol */
+    color: #42b983; /* Bleu clair au survol */
 }
